--- a/application/views/admin_edit_pengeluaran.html
+++ b/application/views/admin_edit_pengeluaran.html
@@ -1,13 +1,10 @@
-<link href="<?php echo base_url();?>asset/plugins/datatable/css/jquery.dataTables.min.css" rel="stylesheet">
-<link href="<?php echo base_url();?>assetplugins/bootstrap/bootstrap.min.css" rel="stylesheet">
-<link href="<?php echo base_url();?>asset/plugins/animate.css/animate.min.css" rel="stylesheet">
-<link href="<?php echo base_url();?>asset/plugins/datepicker/datetimepicker.css" rel="stylesheet">
-<link rel="stylesheet" href="asset/css/main.css">
-
-
+<link href="<?php echo base_url(); ?>asset/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
+<link href="<?php echo base_url(); ?>asset/plugins/animate.css/animate.min.css" rel="stylesheet">
+<link href="<?php echo base_url(); ?>asset/plugins/datepicker/datetimepicker.css" rel="stylesheet">
+<link rel="stylesheet" href="<?php echo base_url(); ?>asset/css/main.css">
 <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <p class="modal-title">Ubah Data Barang</p>
+    <p class="modal-title">Ubah Data Karyawan</p>
 </div>
 <?php foreach ($barang->result() as $result) : ?>
     <?php echo form_open_multipart('AdminUbahPengeluaran/Update/'.$result->id_pengeluaran); ?>
@@ -50,58 +47,55 @@
             <label for="tambah_keterangan">Keterangan</label>
             <textarea id="tambah_keterangan" name="keterangan" required class="form-control"><?php echo $result->keterangan?></textarea>
         </div>  
+        <div class="form-group col-md-4">
+            <input id="uploadBtn" type="hidden" name="foto" class="upload" accept=".jpg,.gif,.png,.jpeg" multiple/>
+        </div>  
+        <div class="col-md-12 clearfix">
+            <hr>
+        </div> 
+
     </div>
     <div class="modal-footer">
-        <button type="submit" id="ubah_submit" class="btn btn-primary btn-lg btn-bold pull-left">Simpan</button>
+    <button type="submit" id="ubah_submit" class="btn btn-primary btn-lg btn-bold pull-left">Simpan</button>
     </div>
     <?php echo form_close(); ?>
 <?php endforeach; ?>
-
 <script src="<?php echo base_url();?>asset/plugins/jquery/jquery.min.js"></script>
 <script src="<?php echo base_url();?>asset/plugins/bootstrap/bootstrap.min.js"></script>
-<script src="<?php echo base_url();?>asset/plugins/datatable/js/jquery.dataTables.min.js"></script>
 <script src="<?php echo base_url();?>asset/plugins/datepicker/moment.min.js"></script>
 <script src="<?php echo base_url();?>asset/plugins/datepicker/datetimepicker.min.js"></script>
-<script language="javascript">
-    $('body').on('hidden.bs.modal', '.modal', function () {
-        $(this).removeData('bs.modal');
-    });
-</script>
+
 <!-- Menu Toggle Script -->
-<script type="text/javascript">
+<script>
     $("#menu-toggle").click(function (e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
     });
 
-            // DATATABLE
-            $(document).ready(function () {
-                oTable = $('#tabel_data_siswa').DataTable({
-                    "dom": '<"toolbar">frtip',
-                    "bFilter": true
-                });
+    // DATATABLE
+    $(document).ready(function () {
+        oTable = $('#tabel_data_siswa').DataTable({
+            "dom": '<"toolbar">frtip',
+            "bFilter": true
+        });
 
-                $('#cari_siswa').keyup(function () {
-                    oTable.search($(this).val()).draw();
-                });
+        $('#cari_instruktur').keyup(function () {
+            oTable.search($(this).val()).draw();
+        });
+    });
 
-            });
+    document.getElementById("uploadBtn").onchange = function () {
+        document.getElementById("uploadFile").value = this.value;
+    };
 
-            document.getElementById("uploadBtn").onchange = function () {
-                document.getElementById("uploadFile").value = this.value;
-            };
-
-            // Datetimepicker
-            $('.tanggal').datetimepicker({
-                pickTime: false,
-                icons: {
-                    time: "fa fa-clock-o",
-                    date: "fa fa-calendar",
-                    up: "fa fa-arrow-up",
-                    down: "fa fa-arrow-down"
-                }
-            });
-            function confirmDialog(){
-                return confirm("Apakah Anda Yakin Ingin Menghapus Data Ini?")
-            }
-        </script>
+    // Datetimepicker
+    $('.tanggal').datetimepicker({
+        pickTime: false,
+        icons: {
+            time: "fa fa-clock-o",
+            date: "fa fa-calendar",
+            up: "fa fa-arrow-up",
+            down: "fa fa-arrow-down"
+        }
+    });
+</script>
