--- a/application/views/manager_data_kehadiran_siswa.html
+++ b/application/views/manager_data_kehadiran_siswa.html
@@ -36,7 +36,7 @@
                         <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#masterData">Master Data</a>
                         <ul id="masterData" class="collapse sublinks">
                             <li><a href="<?php echo base_url();?>ManagerDataInstruktur">Data Instruktur <span class="blue-text">(<?php echo $this->db->query("Select * from karyawan where jabatan like 'Instruktur%'")->num_rows();?>)</span></a></li>
-                            <li><a href="<?php echo base_url();?>ManagerDataKaryawan">Data Karyawan <span class="blue-text">(<?php echo $this->db->query("Select * from karyawan where not jabatan like 'Instruktur%'")->num_rows();?>)</span></a></li>
+                            <li><a href="<?php echo base_url();?>ManagerDataKaryawan">Data Karyawan <span class="blue-text">(<?php echo $this->db->query("Select * from karyawan where not jabatan like 'Instruktur%' and not nama='Admin' and not nama = 'Administrator'")->num_rows();?>)</span></a></li>
                             <li><a href="<?php echo base_url();?>ManagerDataSiswa">Data Siswa <span class="blue-text">(<?php echo $this->db->query("Select * from siswa")->num_rows();?>)</span></a></li>
                         </ul>
                     </li>
