--- a/application/views/manager_tambah_jadwal.html
+++ b/application/views/manager_tambah_jadwal.html
@@ -35,9 +35,9 @@
                     <li class="sidebar-item">
                         <a class="sidebar-link has-sub collapsed active" data-toggle="collapse" data-parent=".sidebar-item" href="#masterData">Master Data</a>
                         <ul id="masterData" class="collapse sublinks">
-                            <li><a href="<?php echo base_url();?>ManagerDataInstruktur">Data Instruktur <span class="blue-text">(9)</span></a></li>
-                            <li><a href="<?php echo base_url();?>ManagerDataKaryawan">Data Karyawan <span class="blue-text">(15)</span></a></li>
-                            <li><a href="<?php echo base_url();?>ManagerDataSiswa" class="sidebar-link active">Data Siswa <span class="blue-text">(20)</span></a></li>
+                            <li><a href="<?php echo base_url();?>ManagerDataInstruktur">Data Instruktur <span class="blue-text">(<?php echo $this->db->query("Select * from karyawan where jabatan like 'Instruktur%'")->num_rows();?>)</span></a></li>
+                            <li><a href="<?php echo base_url();?>ManagerDataKaryawan">Data Karyawan <span class="blue-text">(<?php echo $this->db->query("Select * from karyawan where not jabatan like 'Instruktur%' and not nama='Admin' and not nama = 'Administrator'")->num_rows();?>)</span></a></li>
+                            <li><a href="<?php echo base_url();?>ManagerDataSiswa" class="sidebar-link active">Data Siswa <span class="blue-text">(<?php echo $this->db->query("Select * from siswa")->num_rows();?>)</span></a></li>
                         </ul>
                     </li>
                     <li class="sidebar-item">
