--- a/application/views/manager_ubah_profil.html
+++ b/application/views/manager_ubah_profil.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,94 +12,94 @@
     <link href="asset/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="asset/plugins/animate.css/animate.min.css" rel="stylesheet">
     <link rel="stylesheet" href="asset/css/main.css">
-  </head>
+</head>
 <body>
-<!-- wrapper -->
-<div id="wrapper">
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper" class="animated">
-        <ul class="sidebar-nav sidebar-group">
-            <li class="sidebar-brand">
-                <a href="#">
-                    Rotobot - Sistem Manajemen Course
-                </a>
-            </li>
-            <li class="sidebar-item sidebar-text"><p>navigasi</p></li>
-            <li class="sidebar-item">
-                <a href="<?php echo base_url();?>HomeManager" class="sidebar-link">Dashboard</a>
-            </li> 
-            <li class="sidebar-item">
-                <a href="<?php echo base_url();?>ProfilManager" class="sidebar-link active">Profil</a>
-            </li> 
-            <li class="sidebar-item">
-                <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#masterData">Master Data</a>
-                <ul id="masterData" class="collapse sublinks">
-                    <li><a href="<?php echo base_url();?>ManagerDataInstruktur">Data Instruktur <span class="blue-text">(<?php echo $this->db->query("Select * from karyawan where jabatan like 'Instruktur%'")->num_rows();?>)</span></a></li>
-                            <li><a href="<?php echo base_url();?>ManagerDataKaryawan">Data Karyawan <span class="blue-text">(<?php echo $this->db->query("Select * from karyawan where not jabatan like 'Instruktur%'")->num_rows();?>)</span></a></li>
-                            <li><a href="<?php echo base_url();?>ManagerDataSiswa">Data Siswa <span class="blue-text">(<?php echo $this->db->query("Select * from siswa")->num_rows();?>)</span></a></li>
+    <!-- wrapper -->
+    <div id="wrapper">
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper" class="animated">
+            <ul class="sidebar-nav sidebar-group">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Rotobot - Sistem Manajemen Course
+                    </a>
+                </li>
+                <li class="sidebar-item sidebar-text"><p>navigasi</p></li>
+                <li class="sidebar-item">
+                    <a href="<?php echo base_url();?>HomeManager" class="sidebar-link">Dashboard</a>
+                </li> 
+                <li class="sidebar-item">
+                    <a href="<?php echo base_url();?>ProfilManager" class="sidebar-link active">Profil</a>
+                </li> 
+                <li class="sidebar-item">
+                    <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#masterData">Master Data</a>
+                    <ul id="masterData" class="collapse sublinks">
+                        <li><a href="<?php echo base_url();?>ManagerDataInstruktur">Data Instruktur <span class="blue-text">(<?php echo $this->db->query("Select * from karyawan where jabatan like 'Instruktur%'")->num_rows();?>)</span></a></li>
+                        <li><a href="<?php echo base_url();?>ManagerDataKaryawan">Data Karyawan <span class="blue-text">(<?php echo $this->db->query("Select * from karyawan where not jabatan like 'Instruktur%' and not nama='Admin' and not nama = 'Administrator'")->num_rows();?>)</span></a></li>
+                        <li><a href="<?php echo base_url();?>ManagerDataSiswa">Data Siswa <span class="blue-text">(<?php echo $this->db->query("Select * from siswa")->num_rows();?>)</span></a></li>
+                    </ul>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#dataAbsensi">Data Absensi</a>
+                    <ul id="dataAbsensi" class="collapse sublinks">
+                        <li><a href="<?php echo base_url();?>ManagerDataAbsensiInstruktur">Data Absensi Instruktur</a></li>
+                        <li><a href="<?php echo base_url();?>ManagerDataAbsensiKaryawan">Data Absensi Karyawan</a></li>
+                        <li><a href="<?php echo base_url();?>ManagerDataAbsensiSiswa">Data Absensi Siswa</a></li>
+                    </ul>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#dataHonor">Data Honor</a>
+                    <ul id="dataHonor" class="collapse sublinks">
+                        <li><a href="<?php echo base_url();?>ManagerDataHonor">Data Honor</a></li>
+                        <li><a href="<?php echo base_url();?>ManagerDataHonorInstruktur">Data Instruktur</a></li>
+                        <li><a href="<?php echo base_url();?>ManagerDataHonorKaryawan">Data Karyawan</a></li>
+                    </ul>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#berkas">Berkas</a>
+                    <ul id="berkas" class="collapse sublinks">
+                        <li><a href="<?php echo base_url();?>ManagerMateriPembelajaran">Materi Pembelajaran</a></li>
+                        <li><a href="<?php echo base_url();?>ManagerRencanaPembelajaran">Rencana Pelaksanaan Pembelajaran</a>
+                        </ul>
+                    </li>
+                    <li class="sidebar-item">
+                        <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#dataTransaksi">Data Transaksi</a>
+                        <ul id="dataTransaksi" class="collapse sublinks">
+                            <li><a href="<?php echo base_url();?>ManagerTransaksiPengeluaran" class="sidebar-link ">Transaksi Pengeluaran</a></li>
+                        </ul>
+                    </li>
                 </ul>
-            </li>
-            <li class="sidebar-item">
-                <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#dataAbsensi">Data Absensi</a>
-                <ul id="dataAbsensi" class="collapse sublinks">
-                    <li><a href="<?php echo base_url();?>ManagerDataAbsensiInstruktur">Data Absensi Instruktur</a></li>
-                    <li><a href="<?php echo base_url();?>ManagerDataAbsensiKaryawan">Data Absensi Karyawan</a></li>
-                    <li><a href="<?php echo base_url();?>ManagerDataAbsensiSiswa">Data Absensi Siswa</a></li>
-                </ul>
-            </li>
-            <li class="sidebar-item">
-                <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#dataHonor">Data Honor</a>
-                <ul id="dataHonor" class="collapse sublinks">
-                    <li><a href="<?php echo base_url();?>ManagerDataHonor">Data Honor</a></li>
-                    <li><a href="<?php echo base_url();?>ManagerDataHonorInstruktur">Data Instruktur</a></li>
-                    <li><a href="<?php echo base_url();?>ManagerDataHonorKaryawan">Data Karyawan</a></li>
-                </ul>
-            </li>
-            <li class="sidebar-item">
-                <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#berkas">Berkas</a>
-                <ul id="berkas" class="collapse sublinks">
-                    <li><a href="<?php echo base_url();?>ManagerMateriPembelajaran">Materi Pembelajaran</a></li>
-                    <li><a href="<?php echo base_url();?>ManagerRencanaPembelajaran">Rencana Pelaksanaan Pembelajaran</a>
-                </ul>
-            </li>
-            <li class="sidebar-item">
-                <a class="sidebar-link has-sub collapsed" data-toggle="collapse" data-parent=".sidebar-item" href="#dataTransaksi">Data Transaksi</a>
-                <ul id="dataTransaksi" class="collapse sublinks">
-                    <li><a href="<?php echo base_url();?>ManagerTransaksiPengeluaran" class="sidebar-link ">Transaksi Pengeluaran</a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <!-- /#sidebar-wrapper -->
-
-    <!-- Toggle Button -->
-    <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><i class="fa fa-bars"></i></a>
-    <!-- /Toggle Button -->
-
-    <!-- Page Content -->
-    <div id="page-content-wrapper">
-        <div class="container-fluid">
-          <!-- Top Bar -->
-            <div class="row">
-              <nav id="top-menu-bar" class="navbar navbar-default navbar-fixed-top" role="navigation">
-                <div class="container-fluid">
-                  <ul class="nav navbar-nav navbar-right" id="top-menu-item">
-                      <li class="pull-right"><a href="<?php echo base_url();?>login/logout"><i class="fa fa-power-off"></i> Logout</a></li>
-                    <li class="pull-right"><p class="navbar-text divider">|</p></li>
-                    <li class="pull-right"><p class="navbar-text">Selamat datang, <a href="#" class="navbar-link"><?php echo $this->session->userdata('nama');?></a></p></li>
-                  </ul>
-                </div>
-              </nav>
             </div>
-          <!-- /Top Bar -->
-          
-          <!-- Main Content -->
-            <div id="main-content">
+            <!-- /#sidebar-wrapper -->
+
+            <!-- Toggle Button -->
+            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><i class="fa fa-bars"></i></a>
+            <!-- /Toggle Button -->
+
+            <!-- Page Content -->
+            <div id="page-content-wrapper">
+                <div class="container-fluid">
+                  <!-- Top Bar -->
+                  <div class="row">
+                      <nav id="top-menu-bar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+                        <div class="container-fluid">
+                          <ul class="nav navbar-nav navbar-right" id="top-menu-item">
+                              <li class="pull-right"><a href="<?php echo base_url();?>login/logout"><i class="fa fa-power-off"></i> Logout</a></li>
+                              <li class="pull-right"><p class="navbar-text divider">|</p></li>
+                              <li class="pull-right"><p class="navbar-text">Selamat datang, <a href="#" class="navbar-link"><?php echo $this->session->userdata('nama');?></a></p></li>
+                          </ul>
+                      </div>
+                  </nav>
+              </div>
+              <!-- /Top Bar -->
+
+              <!-- Main Content -->
+              <div id="main-content">
                 <!-- breadcrumb -->
                 <div class="row" >
                     <ol class="breadcrumb">
                         <li><a href="<?php echo base_url();?>HomeManager">Dashboard</a></li>
-                      <li class="active">Profil</li>
+                        <li class="active">Profil</li>
                     </ol>
                 </div>
                 <!-- breadcrumb -->
@@ -108,78 +108,78 @@
                     <div class="main-title clearfix">
                         <h1>Ubah Profil</h1>
                     </div>
-                        
+
                     <hr>
 
                     <?php echo form_open_multipart('ManagerUbahProfil/Update'); ?>
-                        <div class="col-md-6 p-l-0">
-                            <div class="form-group col-md-4">
-                                <label>ID</label>
-                                <input id="ubah_id_karyawan" type="text" disabled name="" class="form-control" value="<?php echo $this->session->userdata('ids');?>">
+                    <div class="col-md-6 p-l-0">
+                        <div class="form-group col-md-4">
+                            <label>ID</label>
+                            <input id="ubah_id_karyawan" type="text" disabled name="" class="form-control" value="<?php echo $this->session->userdata('ids');?>">
+                        </div>
+                        <div class="clearfix"></div>
+                        <div class="form-group col-md-8 ">
+                            <label>Nama</label>
+                            <input id="ubah_nama_karyawan" required type="text" name="nama" class="form-control" value="<?php echo $this->session->userdata('nama');?>">
+                            <!--                                <span class="help-block">Field Nama Harus di Isi</span>-->
+                        </div>
+                        <div class="form-group col-md-6">
+                            <input id="uploadFile" placeholder="Choose Image" class="col-md-4 form-control" disabled="disabled" />
+                        </div> 
+                        <div class="form-group col-md-4">
+                            <div class="fileUpload btn btn-success">
+                                <span>Browse</span>
+                                <input id="uploadBtn" type="file" name="foto" class="upload" accept=".jpg,.gif,.png,.jpeg" multiple/>
                             </div>
-                            <div class="clearfix"></div>
-                            <div class="form-group col-md-8 ">
-                                <label>Nama</label>
-                                <input id="ubah_nama_karyawan" required type="text" name="nama" class="form-control" value="<?php echo $this->session->userdata('nama');?>">
-<!--                                <span class="help-block">Field Nama Harus di Isi</span>-->
-                            </div>
-                            <div class="form-group col-md-6">
-                                <input id="uploadFile" placeholder="Choose Image" class="col-md-4 form-control" disabled="disabled" />
-                            </div> 
-                            <div class="form-group col-md-4">
-                                <div class="fileUpload btn btn-success">
-                                    <span>Browse</span>
-                                    <input id="uploadBtn" type="file" name="foto" class="upload" accept=".jpg,.gif,.png,.jpeg" multiple/>
-                                </div>
-                            </div>  
-                            <div class="form-group col-md-8">
-                                <label>Jabatan</label> 
-                                <input id="ubah_jabatan" type="text" name="" class="form-control" value="Manager" disabled>
-                            </div>
-                            <div class="col-md-12 clearfix">
-                                <hr>
-                            </div>
-                            <div class="form-group col-md-12">
-                                <label>Alamat</label>
-                                <textarea id="ubah_alamat" required name="alamat" class="form-control resize-y"><?php echo $this->session->userdata('alamat');?></textarea>
-                            </div>
-                            <div class="col-md-12 clearfix">
-                                <hr>
-                            </div>
-                            <div class="form-group col-md-8">
-                                <label>Email</label>
-                                <input id="ubah_email" type="text" name="email" class="form-control" value="<?php echo $this->session->userdata('email');?>">
-                            </div>                        
-                            <div class="form-group col-md-8 ">
-                                <label for="ubah_sandi">Kata Sandi</label>
-                                <input id="ubah_sandi" required type="password" name="pass1" class="form-control" value="inipasswordku">
-<!--                                <span class="help-block">Kata Sandi Tidak Sama</span>-->
-                            </div>                               
-                            <div class="form-group col-md-8 ">
-                                <label for="ubah_sandi2">Ketik Ulang Kata Sandi</label>
-                                <input id="ubah_sandi2" required type="password" name="pass2" class="form-control" value="inipasswordku">
-<!--                                <span class="help-block">Kata Sandi Tidak Sama</span>-->
-                            </div>    
-
-                            <div class="col-xs-12 clearfix">
-                                <hr>
-                            </div>  
-
-                            <div class="col-xs-12">
-                                <button type="submit" name="upload" class="btn btn-primary btn-lg btn-bold pull-left">Simpan</button>
-                            </div>       
-
                         </div>  
+                        <div class="form-group col-md-8">
+                            <label>Jabatan</label> 
+                            <input id="ubah_jabatan" type="text" name="" class="form-control" value="Manager" disabled>
+                        </div>
+                        <div class="col-md-12 clearfix">
+                            <hr>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label>Alamat</label>
+                            <textarea id="ubah_alamat" required name="alamat" class="form-control resize-y"><?php echo $this->session->userdata('alamat');?></textarea>
+                        </div>
+                        <div class="col-md-12 clearfix">
+                            <hr>
+                        </div>
+                        <div class="form-group col-md-8">
+                            <label>Email</label>
+                            <input id="ubah_email" type="text" name="email" class="form-control" value="<?php echo $this->session->userdata('email');?>">
+                        </div>                        
+                        <div class="form-group col-md-8 ">
+                            <label for="ubah_sandi">Kata Sandi</label>
+                            <input id="ubah_sandi" required type="password" name="pass1" class="form-control" value="inipasswordku">
+                            <!--                                <span class="help-block">Kata Sandi Tidak Sama</span>-->
+                        </div>                               
+                        <div class="form-group col-md-8 ">
+                            <label for="ubah_sandi2">Ketik Ulang Kata Sandi</label>
+                            <input id="ubah_sandi2" required type="password" name="pass2" class="form-control" value="inipasswordku">
+                            <!--                                <span class="help-block">Kata Sandi Tidak Sama</span>-->
+                        </div>    
+
+                        <div class="col-xs-12 clearfix">
+                            <hr>
+                        </div>  
+
+                        <div class="col-xs-12">
+                            <button type="submit" name="upload" class="btn btn-primary btn-lg btn-bold pull-left">Simpan</button>
+                        </div>       
+
+                    </div>  
                     <?php echo form_close(); ?>
                 </div>
             </div>
             <!-- /.row -->
 
-            </div>
-          <!-- Main Content -->
         </div>
+        <!-- Main Content -->
     </div>
-    <!-- /#page-content-wrapper -->
+</div>
+<!-- /#page-content-wrapper -->
 </div>
 <!-- /#wrapper -->
 
